updated the pom file to use New Central Portal